--- a/M2/Google Colab Simple Convolution.ipynb
+++ b/M2/Google Colab Simple Convolution.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Lab3-What-Are-Convolutions.ipynb",
       "provenance": [],
-      "collapsed_sections": []
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -13,6 +13,16 @@
     }
   },
   "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/armandoBringas/VisionComputacional-Equipo4/blob/main/M2/Google%20Colab%20Simple%20Convolution.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
     {
       "metadata": {
         "id": "GhZOHbwJOvio"
